hphp/test/zend/bad/ext/intl/tests/bug62070.php
<?php
$s1 = 'Hello';

$coll = collator_create('en_US');
$res = collator_get_sort_key($coll, $s1);

echo urlencode($res);